refactor: remove deprecated ErrorEmbed methods